<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>de.ralleytn.simple.registry</groupId>
	<artifactId>SimpleRegistry</artifactId>
	<version>2.0.0</version>
	<name>SimpleRegistry</name>
	<properties>
      <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
      <maven.compiler.target>1.9</maven.compiler.target>
      <maven.compiler.source>1.9</maven.compiler.source>
	</properties>
	<description>SimpleRegistry is pure Java library that grants you read and write access to the Windows registry.</description>
	<licenses>
        <license>
            <name>MIT License</name>
            <url>https://github.com/RalleYTN/SimpleRegistry/blob/master/LICENSE</url>
        </license>
	</licenses>
	<developers>
		<developer>
            <id>RalleYTN</id>
            <name>Ralph Niemitz</name>
            <roles>
                <role>architect</role>
                <role>developer</role>
            </roles>
            <timezone>+1</timezone>
        </developer>
	</developers>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<source>9</source>
                    <target>9</target>
                    <showWarnings>true</showWarnings>
					<showDeprecation>true</showDeprecation>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
        		<artifactId>maven-surefire-plugin</artifactId>
        		<version>2.19.1</version>
        		<dependencies>
            		<dependency>
                		<groupId>org.junit.platform</groupId>
                		<artifactId>junit-platform-surefire-provider</artifactId>
                		<version>1.1.0</version>
            		</dependency>
        		</dependencies>
    		</plugin>
		</plugins>
	</build>
    <dependencies>
    	<dependency>
    		<groupId>org.junit.jupiter</groupId>
    		<artifactId>junit-jupiter-api</artifactId>
    		<version>5.0.3</version>
    		<scope>test</scope>
    	</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.0.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.vintage</groupId>
			<artifactId>junit-vintage-engine</artifactId>
			<version>4.12.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-launcher</artifactId>
			<version>1.0.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-runner</artifactId>
			<version>1.0.1</version>
			<scope>test</scope>
		</dependency>
    </dependencies>
</project>
